# zqwl-ucanfd

./: .pre-commit-config.yaml  main.py  makefile  pyproject.toml
test/: errors.py  makefile
ucan/: errors.py  makefile  serial_number.py  utils.py
ucan/driver/: serial_connection.py  serial_write_read.py
ucan/models/: base_model.py  commands.py
ucan/models/commands/: __init__.py  base_command.py  can_filter_setup_command.py  can_setup_command.py  system_control_command.py
ucan/models/data/: base_data.py
ucan/models/responses/: __init__.py  base_response.py  can_setup_response.py  data_response.py  system_control_response.py
