[tool.poetry]
name = "zqwl-ucanfd"
version = "1.0.0"
description = ""
authors = ["xiaoling <samuel.ling.xiao@qq.com>"]
readme = "README.md"
packages = [{include = "ucan"}]

[tool.poetry.dependencies]
python = ">=3.10,<=3.14"
pre-commit = "4.2.0"
pydantic = "^2.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
